tests/neg/simple/10-func-expression.ts

/*@ foo2 :: () => () => undefined */
export function foo2() {
    assert(false);
    return function() {
        return undefined;
    }
}
